# Red-Alert-Monitoring-Stack

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  bootstrap.sh  deploy.sh  docker-compose.ha.yml  docker-compose.override.example.yml  docker-compose.with-broker.yml  docker-compose.yml  setup.sh
.claude/commands/: setup-lights.md  setup-mqtt.md  setup-tunnel.md  (+2 more)
actuator/: Dockerfile  actuator.py  generate_audio.py  pyproject.toml
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
archive/: README.md  bootstrap.sh  generate_audio.py
backend/osint-notifier/: .env.example  Dockerfile  README.md  classifiers.py  docker-compose.yml  intel.py  main.py  news_context.py  notifier.py  oref_monitor.py  pyproject.toml  sitrep.py  telegram_monitor.py
backend/telegram-bot/: Dockerfile  bot.py  pyproject.toml
compose/: core.yml  default.yml  ha.yml  override.example.yml  with-broker.yml
db/: schema.sql
docs/: ARCHITECTURE.md  CUTOVER_TIMESCALE.md  OPERATIONS_NOTES.md  index.html
frontend/geodash/backend/: migrate_influx_to_pg.py  pyproject.toml  server.py
ha/: example_automations.yaml  input_select.yaml
management-ui/: Dockerfile  app.py  package-lock.json  package.json
mcp-server/: Dockerfile  requirements.txt  server.py
mosquitto/: mosquitto.conf
nginx/: nginx.conf
oref-proxy/: pyproject.toml  server.py
prompt-runner/: app.py  email_sender.py  requirements.txt  scheduler.py
pushover/: Dockerfile  notifier.py  pyproject.toml
rss-cache/: Dockerfile  app.py
telegram-bot/: bot.py  pyproject.toml
(+148 files in other folders)
