[project]
name = "red-alert-osint-notifier"
version = "0.1.0"
description = "Unified notification and OSINT module for Israel Red Alert monitoring"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
