[project]
name = "red-alert-geodash"
version = "2.0.0"
description = "Real-time dashboard for Israel Pikud HaOref alerts with PostgreSQL storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Only needed when running migrate_influx_to_pg.py against an old Influx instance.
migration = ["influxdb-client>=1.38"]

[project.scripts]
geodash = "server:app"
